# spoc_lite

./: Dockerfile  README.md  spoc_lite.rosinstall
ortho_projector/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
ortho_projector/include/ortho_projector/: ortho_projector.h  terrain_mapper.h
ortho_projector/src/: ortho_projector.cpp  ortho_projector_node.cpp  ortho_projector_nodelet.cpp  terrain_mapper.cpp  terrain_mapper_node.cpp  terrain_mapper_nodelet.cpp
ortho_projector/tests/: dummy_tf.launch
sand_classifier/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
sand_classifier/include/sand_classifier/: classifier.h  classifier_v1.h  classifier_v2.h
sand_classifier/models/: svm_type_0_c_10_g_-20_w_25_ave_170711.model  svm_type_0_c_10_g_-20_w_25_ave_lbp_170711.model  svm_type_0_c_10_g_-40_w_25_pyramid_1.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_DCT.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_DCT_new.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_LBP.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_LBP_DCT.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_LBP_DCT_35.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_LBP_new.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_LBP_with_intensity.model  svm_type_0_c_20_g_-20_w_25_pyramid_1_AVE_with_intensity.model  svm_type_0_c_20_g_-20_w_35_pyramid_1_AVE_DCT_new.model  svm_type_0_c_20_g_-20_w_45_pyramid_1_AVE_DCT_new.model
sand_classifier/spoc_lite/: Makefile  Makefile_JPL  Makefile_home  README.md  classification.cpp  classification.h  classification_ibo.cpp  classification_ibo.h  history  ibo.cpp  ibo.h  main.cpp  main.h  setting_svm_ave.txt  setting_svm_ave_2017_0622.txt  setting_svm_ave_lbp.txt  setting_svm_ave_lbp_2017_0622.txt
sand_classifier/spoc_lite/ibo/: bco.cpp  bco.h  bco_mc.cpp  bco_mc.h  bfo.cpp  bfo.h  bop.h  buo.cpp  buo.h  lbp.cpp  lbp.h  libsvm.cpp  libsvm.h  svm.cpp  svm.h  svm_linear.cpp  svm_linear.h
sand_classifier/spoc_lite/ibo/linearsvm/: linear.cpp  linear.h
sand_classifier/spoc_lite/sample_images/: C002310.pgm
sand_classifier/src/: classifier.cpp  classifier_v1.cpp  classifier_v2.cpp  sand_classifier_node.cpp  sand_classifier_nodelet.cpp
sand_classifier/tests/: test_classifier.cpp  test_classifier.test  test_ros_api.cpp  test_ros_api.test
sand_classifier/tests/data/: camera.yaml
spoc_lite/: CMakeLists.txt  package.xml
spoc_lite/config/: ortho_projector.yaml  sand_classifier.yaml
spoc_lite/launch/: spoc_lite.launch  spoc_lite_pipeline.launch
spoc_lite/tests/: demo_classifier.launch  demo_mapping.launch  spoc_lite.rviz
