<?xml version="1.0"?>
<package format="2">
  <name>ortho_projector</name>
  <version>1.0.0</version>
  <description>The ortho_projector package</description>

  <maintainer email="otsu@jpl.nasa.gov">otsu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>claraty_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
