<?xml version="1.0"?>
<package format="2">
  <name>sand_classifier</name>
  <version>1.0.0</version>
  <description>The sand_classifier package</description>

  <maintainer email="otsu@jpl.nasa.gov">otsu</maintainer>
  <author email="iwashita@jpl.nasa.gov">iwashita</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <depend>message_filters</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
